Fix alignment of actions on student editor for mobile

--- a/src/index.css
+++ b/src/index.css
@@ -431,7 +431,7 @@ div.problem-container {
         width:200px
     }
     .equation-list {
-        max-width:98%
+        max-width:95%
     }
     iframe.tutorial-video {
         width: 400px;
